# open-proxy-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  API_STATUS.txt  CASE_DEFINITION.md  CLAUDE.md  DEVLOG.md  Dockerfile  PATTERN_ARCHIVE.md  README.md  README_ENG.md  README_KR.md  TO_DO.md  blueprint.md  codex_suggested_architecture.md  fallback_targets.json  fly.toml  homework.md  pdf_parser_fulltest.json  pyproject.toml  regen_pipeline.py  requirements.txt  run_pipeline.py  save_agm_results.py  test_agm.ipynb  test_api.py
.omc/sessions/: 9089eb37-5887-412e-abe6-752a19de3029.json
data/: market_cap.json
docs/: ARCHITECTURE.md  connect.md  connect_eng.md  examples.md  examples_eng.md  voting_criteria.md
docs/v1/: README.md  (+1 more)
open-proxy-mcp/: index.md
open_proxy_mcp/: AGM_MANUAL.md  AGM_TOOL_RULE.md  DIV_TOOL_RULE.md  OWN_CASE_RULE.md  OWN_TOOL_RULE.md  PRX_TOOL_RULE.md  __init__.py  __main__.py  server.py
scripts/: aggregate_compensation_retirement.py  classify_shareholder_meeting_notices_2026.py  extract_shareholder_meeting_notice_audit_samples.py  parsing_success_rate_audit.py  perf_data_tools_audit.py  perf_safe_additional_audit.py  ralph_inside_director_performance_audit.py  ralph_treasury_audit.py  shareholder_meeting_notice_parsing_audit.py  spot_classify_agenda.py  spot_classify_filer.py  spot_classify_value_up.py  spot_kakaogames_pattern.py  spot_law_layer.py  spot_parser_omnibus.py  spot_pfs_html_search.py  spot_pfs_sparse_recheck.py  summarize_parsing_success_rate_audit.py
test/: run_pipeline_v4.py
wiki/: WIKI_SCHEMA.md  index.md  log.md
(+465 files in other folders)
