[project]
name = "open-proxy-mcp"
version = "0.1.0"
description = "DART 공시 데이터를 MCP 프로토콜로 제공하는 서버"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0", "openai>=1.50.0"]
pdf = ["opendataloader-pdf>=0.1.0", "PyPDF2>=3.0.0"]
all = ["open-proxy-mcp[llm,pdf]"]

[project.license]
text = "CC-BY-NC-4.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
